feat: handle proxy to google place api